--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
       <version>2.25.2</version>
       <scope>compile</scope>
     </dependency>
+    <!-- Allure Java Commons for test annotations and reporting -->
+    <dependency>
+      <groupId>io.qameta.allure</groupId>
+      <artifactId>allure-java-commons</artifactId>
+      <version>2.20.0</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <reporting>
     <plugins>
@@ -50,4 +58,37 @@
       </plugin>
     </plugins>
   </reporting>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <!-- Enable Java assertions during tests -->
+          <argLine>-ea</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.8</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
